force-app/main/default/objects/smagicinteract__Conversation_Threading__mdt/smagicinteract__Conversation_Threading__mdt.object-meta.xml
<CustomObject>
    <description>Conversation threading will be assigned to which sender.</description>
    <label>Conversation Threading</label>
    <pluralLabel>Conversation Threadings</pluralLabel>
</CustomObject>