force-app/main/default/objects/smagicinteract__Conversation_Threading__mdt/fields/smagicinteract__Based_on__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Based_on__c</fullName>
    <description>It will store Based on Option List Eg: Default Setting, Phone Number and Sender Id Only, Advanced Setting</description>
    <label>Based on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PersonObject;PhoneNumber;InformationObject;SenderId;MessageOwner;ContainerObject</fullName>
                <default>true</default>
                <label>Default Setting</label>
            </value>
            <value>
                <fullName>PhoneNumber;SenderId</fullName>
                <label>Phone Number and Sender Id Only</label>
            </value>
            <value>
                <fullName>Advanced Setting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>