force-app/main/default/objects/smagicinteract__Conversation_Threading__mdt/fields/smagicinteract__Option_Values__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Option_Values__c</fullName>
    <label>Option Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>