force-app/main/default/objects/smagicinteract__Conversation_Threading__mdt/fields/smagicinteract__Options__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Options__c</fullName>
    <description>It will store Option List Eg: Phone Object, Phone Number, Information Object</description>
    <label>Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PersonObject</fullName>
                <default>true</default>
                <label>Person Object</label>
            </value>
            <value>
                <fullName>PhoneNumber</fullName>
                <label>Phone Number</label>
            </value>
            <value>
                <fullName>InformationObject</fullName>
                <label>Information Object</label>
            </value>
            <value>
                <fullName>SenderId</fullName>
                <label>Sender Id</label>
            </value>
            <value>
                <fullName>MessageOwner</fullName>
                <label>Message Owner</label>
            </value>
            <value>
                <fullName>ContainerObject</fullName>
                <label>Container Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>